--- a/app/src/main/res/layout/activity_student_login.xml
+++ b/app/src/main/res/layout/activity_student_login.xml
@@ -7,36 +7,52 @@
     tools:context="com.example.user.coin.student_login">
 
     <ScrollView
-        android:layout_width="344dp"
+        style="@android:style/Widget.Holo.Light.ScrollView"
+        android:layout_width="wrap_content"
         android:layout_height="495dp"
+        android:clipToPadding="false"
         android:fillViewport="true"
-        tools:layout_editor_absoluteX="7dp"
-        tools:layout_editor_absoluteY="8dp">
+        android:layout_gravity="center"
+        android:scrollbarStyle="outsideOverlay"
+        tools:layout_editor_absoluteY="8dp"
+        android:layout_marginRight="8dp"
+        app:layout_constraintRight_toRightOf="parent">
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:layout_height="match_parent"
+            android:elevation="1dp"
+            android:orientation="vertical"
+            android:padding="5dp"
+            android:paddingBottom="5dp"
+            android:paddingEnd="5dp"
+            android:paddingLeft="5dp"
+            android:paddingRight="5dp"
+            android:paddingStart="5dp"
+            android:paddingTop="5dp">
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:layout_weight="0"
                 android:orientation="horizontal">
 
                 <TextView
                     android:id="@+id/textView3"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1"
+                    android:layout_weight="0"
                     android:text="會員帳號："
                     android:textAlignment="viewStart"
+
                     android:textSize="18sp" />
 
                 <EditText
                     android:id="@+id/e1"
-                    android:layout_width="wrap_content"
+                    android:layout_width="5dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
+
                     android:ems="10"
                     android:hint="帳號需英文開頭"
                     android:inputType="textPersonName" />
@@ -46,14 +62,14 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_weight="1"
+                android:layout_weight="0"
                 android:orientation="horizontal">
 
                 <TextView
                     android:id="@+id/textView4"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1"
+                    android:layout_weight="0"
                     android:text="密碼："
                     android:textAlignment="viewStart"
                     android:textSize="18sp" />
@@ -64,19 +80,21 @@
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:ems="10"
+
                     android:inputType="textPassword" />
             </LinearLayout>
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:layout_weight="0"
                 android:orientation="horizontal">
 
                 <TextView
                     android:id="@+id/textView5"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1"
+                    android:layout_weight="0"
                     android:text="確認密碼："
                     android:textAlignment="viewStart"
                     android:textSize="18sp" />
@@ -85,7 +103,7 @@
                     android:id="@+id/com_pass"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_weight="87.07"
+                    android:layout_weight="1"
                     android:textSize="18sp" />
 
             </LinearLayout>
@@ -93,6 +111,7 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:layout_weight="0"
                 android:orientation="horizontal">
 
                 <ImageView
@@ -112,7 +131,7 @@
                     android:id="@+id/textView6"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1"
+                    android:layout_weight="0"
                     android:text="姓名："
                     android:textAlignment="viewStart"
                     android:textSize="18sp" />
@@ -130,7 +149,8 @@
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="32dp"
+                android:layout_weight="0"
                 android:orientation="horizontal">
 
                 <TextView
@@ -143,7 +163,7 @@
                     android:textSize="18sp" />
 
                 <Spinner
-                    android:id="@+id/spinner"
+                    android:id="@+id/spr_sch"
                     android:layout_width="240dp"
                     android:layout_height="wrap_content" />
 
@@ -151,7 +171,8 @@
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="0"
                 android:orientation="horizontal">
 
                 <TextView
@@ -163,7 +184,7 @@
                     android:textSize="18sp" />
 
                 <Spinner
-                    android:id="@+id/spinner2"
+                    android:id="@+id/spr_dep"
                     android:layout_width="238dp"
                     android:layout_height="wrap_content" />
 
@@ -172,13 +193,14 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:layout_weight="0"
                 android:orientation="horizontal">
 
                 <TextView
                     android:id="@+id/textView11"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_weight="0.97"
+                    android:layout_weight="0"
                     android:text="學號："
                     android:textSize="18sp" />
 
@@ -194,23 +216,30 @@
             </LinearLayout>
 
             <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_weight="0.97"
+                android:layout_width="330dp"
+                android:layout_height="35dp"
+                android:layout_weight="0"
                 android:orientation="horizontal">
 
                 <TextView
                     android:id="@+id/textView12"
-                    android:layout_width="wrap_content"
+                    android:layout_width="89dp"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1"
                     android:text="性別："
-                    android:textAlignment="viewStart"
                     android:textSize="18sp" />
 
                 <RadioGroup
-                    android:layout_width="209dp"
-                    android:layout_height="wrap_content">
+                    android:id="@+id/sex"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal">
+
+                    <RadioButton
+                        android:id="@+id/sex_man"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="0.22"
+                        android:text="男" />
 
                     <RadioButton
                         android:id="@+id/sex_woman"
@@ -219,22 +248,15 @@
                         android:layout_weight="1"
                         android:text="女" />
 
-                    <RadioButton
-                        android:id="@+id/sex_man"
-                        style="@android:style/Widget.DeviceDefault.Light.CompoundButton.RadioButton"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:checked="false"
-                        android:text="男" />
                 </RadioGroup>
+
 
             </LinearLayout>
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
+                android:layout_height="wrap_content"
+                android:layout_weight="0"
                 android:orientation="horizontal">
 
                 <TextView
@@ -245,7 +267,7 @@
                     android:textSize="18sp" />
 
                 <Spinner
-                    android:id="@+id/spinner3"
+                    android:id="@+id/spr_old"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_weight="1" />
@@ -254,13 +276,14 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:layout_weight="0"
                 android:orientation="horizontal">
 
                 <TextView
                     android:id="@+id/textView14"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1"
+                    android:layout_weight="0"
                     android:text="信箱："
                     android:textSize="18sp" />
 
@@ -268,7 +291,7 @@
                     android:id="@+id/editText3"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1.16"
+                    android:layout_weight="1"
                     android:ems="10"
                     android:hint="範例：abc@yuntech.edu.tw"
                     android:inputType="textEmailAddress" />
@@ -278,17 +301,19 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:layout_weight="0"
                 android:orientation="horizontal">
 
                 <TextView
                     android:id="@+id/textView15"
                     android:layout_width="92dp"
                     android:layout_height="wrap_content"
+                    android:layout_weight="0"
                     android:text="專長："
                     android:textSize="18sp" />
 
                 <Spinner
-                    android:id="@+id/spinner4"
+                    android:id="@+id/spr_spe"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_weight="1" />
@@ -298,13 +323,14 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:layout_weight="0"
                 android:orientation="horizontal">
 
                 <TextView
                     android:id="@+id/textView16"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_weight="0.36"
+                    android:layout_weight="0"
                     android:text="期望待遇："
                     android:textSize="18sp" />
 
@@ -312,7 +338,7 @@
                     android:id="@+id/editText6"
                     android:layout_width="wrap_content"
                     android:layout_height="62dp"
-                    android:layout_weight="1.01"
+                    android:layout_weight="1"
                     android:ems="10"
                     android:inputType="textMultiLine" />
 
@@ -321,19 +347,22 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:layout_weight="0"
                 android:orientation="horizontal">
 
                 <CheckBox
-                    android:id="@+id/checkBox2"
+                    android:id="@+id/law"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:text="我同意，One_Stop條款" />
+                    android:text="我同意，One_Stop條款"
+                    android:textColor="#0000ff" />
             </LinearLayout>
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:layout_weight="0"
                 android:orientation="horizontal">
 
                 <Button
