#commit 0912 to google map begin

--- a/app/src/main/res/layout/activity_all_jobs.xml
+++ b/app/src/main/res/layout/activity_all_jobs.xml
@@ -1,48 +1,62 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:layout_gravity="center"
+    android:background="@drawable/stu_job_bg2"
+    android:orientation="vertical"
     tools:context="com.example.user.coin.all_jobs">
+
     <LinearLayout
-        android:layout_width="344dp"
-        android:layout_height="495dp"
-        android:orientation="vertical"
-        tools:layout_editor_absoluteX="8dp"
-        tools:layout_editor_absoluteY="8dp">
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="10dp"
+        android:orientation="horizontal">
 
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="61dp">
+        <Button
+            android:id="@+id/lession"
+            android:layout_width="56dp"
+            android:layout_height="51dp"
+            android:layout_above="@+id/imageView8"
+            android:layout_alignParentStart="true"
+            android:background="@drawable/stu_eva_icon1"
+            android:layout_weight="0.02" />
 
-            <Button
-                android:id="@+id/stuclass"
-                android:layout_width="70dp"
-                android:layout_height="wrap_content"
-                android:layout_alignParentBottom="true"
-                android:background="@drawable/stu_eva_icon1" />
+        <SearchView
+            android:id="@+id/case_search"
+            android:layout_width="152dp"
+            android:layout_height="match_parent"
+            android:layout_alignParentTop="true"
+            android:layout_marginStart="12dp"
 
-            <SearchView
-                android:layout_width="150dp"
-                android:layout_height="match_parent"
-                android:layout_alignParentTop="true"
-                android:layout_toEndOf="@+id/stuclass"
-                android:id="@+id/searchView2" />
+            android:background="@drawable/tvstyle"
+            android:layout_weight="0.17">
 
-            <Button
-                android:id="@+id/button24"
-                style="@style/Widget.AppCompat.Button"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignBaseline="@+id/stuclass"
-                android:layout_alignBottom="@+id/stuclass"
-                android:layout_alignParentEnd="true"
-                android:layout_marginEnd="17dp"
-                android:text="分類"
-                android:textSize="18sp" />
-
-        </RelativeLayout>
+        </SearchView>
 
     </LinearLayout>
-</android.support.constraint.ConstraintLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+        <ImageView
+            android:id="@+id/imageView8"
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:layout_alignParentStart="true"
+            android:layout_below="@+id/case_search"
+            android:layout_marginTop="10dp"
+            android:layout_weight="1"
+            android:background="#000000" />
+    </LinearLayout>
+
+    <ListView
+        android:id="@+id/list_view"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
+
+</LinearLayout>
