--- a/app/src/main/res/drawable/tvstyle.xml
+++ b/app/src/main/res/drawable/tvstyle.xml
@@ -1,10 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape xmlns:android="http://schemas.android.com/apk/res/android" >
-
-    <soild android:color="#809e9393" />
-    <stroke android:width="1dip" android:color="#a9a1a1"/>
-     <corners android:topLeftRadius="2dp"/>
-
+<shape xmlns:android="http://schemas.android.com/apk/res/android">
+    <corners android:radius="3dp" />
+    <stroke
+        android:width="1dp"
+        android:color="#737373" />
 </shape>
 
 
