--- a/app/src/main/res/layout/activity_login_role.xml
+++ b/app/src/main/res/layout/activity_login_role.xml
@@ -1,27 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.user.coin.login_role">
+    android:layout_gravity="center"
+    android:background="@drawable/login_bg2"
+    android:orientation="vertical"
+    tools:context="com.example.user.coin.login_role"
+    tools:layout_editor_absoluteX="8dp"
+    tools:layout_editor_absoluteY="8dp">
 
-    <RelativeLayout
-        android:layout_width="344dp"
-        android:layout_height="495dp"
-        tools:layout_editor_absoluteX="8dp"
-        tools:layout_editor_absoluteY="8dp">
-        android:layout_gravity="center"
-
-        <Button
-            android:id="@+id/role_land"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="店家身分"
-            android:textSize="18sp"
-            android:layout_below="@+id/imageView"
-            android:layout_centerHorizontal="true"
-            android:layout_marginTop="87dp" />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="50dp"
+        android:layout_weight="1"
+        android:orientation="horizontal">
 
         <ImageView
             android:id="@+id/imageView"
@@ -29,17 +24,45 @@
             android:layout_height="120dp"
             android:layout_alignParentTop="true"
             android:layout_centerHorizontal="true"
-            android:layout_marginTop="43dp"
+            android:layout_weight="1"
             app:srcCompat="@drawable/logo" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="5dp"
+        android:layout_weight="1"
+        android:gravity="center_horizontal"
+        android:orientation="horizontal">
+
+        <Button
+            android:id="@+id/role_land"
+            style="@android:style/Widget.Button"
+            android:layout_width="120dp"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/imageView"
+            android:onClick="login"
+            android:text="店家身分"
+            android:textSize="18sp" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:gravity="center_horizontal"
+        android:orientation="horizontal">
 
         <Button
             android:id="@+id/role_stu"
-            android:layout_width="wrap_content"
+            style="@android:style/Widget.Button"
+            android:layout_width="120dp"
             android:layout_height="wrap_content"
+            android:onClick="login"
             android:layout_below="@+id/role_land"
-            android:layout_centerHorizontal="true"
-            android:layout_marginTop="52dp"
             android:text="學生身分"
             android:textSize="18sp" />
-    </RelativeLayout>
-</android.support.constraint.ConstraintLayout>
+    </LinearLayout>
+
+</LinearLayout>
