--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,36 +1,72 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.example.user.coin.MainActivity"
-    tools:layout_editor_absoluteY="81dp"
-    tools:layout_editor_absoluteX="0dp">
+    android:layout_gravity="center_horizontal"
+    tools:layout_editor_absoluteY="8dp"
+    tools:layout_editor_absoluteX="8dp"
+    android:orientation="vertical"
+  >
 
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="30dp"
+        android:layout_gravity="center_vertical"
+        android:orientation="horizontal">
 
+        <ImageView
+            android:id="@+id/imageView3"
+            android:layout_width="120dp"
+            android:layout_height="90dp"
+            android:layout_weight="1"
+            android:layout_alignParentTop="true"
+            android:layout_centerHorizontal="true"
+            app:srcCompat="@drawable/logo" />
+    </LinearLayout>
 
-
-    <RelativeLayout
-        android:layout_width="334dp"
-        android:layout_height="530dp"
-        android:layout_gravity="center"
-        android:layout_marginRight="13dp"
-        app:layout_constraintRight_toRightOf="parent"
-        tools:layout_editor_absoluteY="-10dp"
-        android:layout_marginEnd="11dp">
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:layout_marginRight="35dp"
+        android:layout_marginLeft="35dp"
+        android:orientation="horizontal">
 
         <TextView
             android:id="@+id/textView7"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_above="@+id/pass"
-            android:layout_alignParentStart="true"
-            android:layout_marginBottom="50dp"
-            android:layout_marginStart="16dp"
+            android:layout_above="@+id/textView8"
+            android:layout_toStartOf="@+id/register"
+            android:layout_weight="0"
             android:text="帳號："
-            android:textSize="24sp" />
+            android:textSize="18sp" />
+
+        <EditText
+            android:id="@+id/pp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@drawable/tvstyle"
+            android:hint="輸入帳號或電子郵件"
+            android:inputType="textCapWords"
+            android:selectAllOnFocus="false"
+            android:textColor="?attr/actionMenuTextColor"
+            android:textSize="14sp" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="30dp"
+        android:layout_marginRight="35dp"
+        android:layout_marginLeft="35dp"
+        android:layout_weight="0"
+        android:orientation="horizontal">
 
         <TextView
             android:id="@+id/textView8"
@@ -38,66 +74,96 @@
             android:layout_height="wrap_content"
             android:layout_above="@+id/login"
             android:layout_alignStart="@+id/textView7"
-            android:layout_marginBottom="77dp"
+            android:layout_weight="0"
             android:text="密碼："
-            android:textSize="24sp" />
-
-        <EditText
-            android:id="@+id/id"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignStart="@+id/imageView3"
-            android:layout_alignTop="@+id/textView7"
-            android:background="@drawable/tvstyle"
-            android:ems="10"
-            android:hint="輸入帳號或電子郵件"
-            android:inputType="textPersonName"
-            android:selectAllOnFocus="false"
-            android:singleLine="true"
-            android:textColor="?attr/actionMenuTextColor"
-            android:textSize="18sp"
-            android:layout_alignBottom="@+id/textView7" />
+            android:textSize="18sp" />
 
         <EditText
             android:id="@+id/pass"
             style="@style/Widget.AppCompat.EditText"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_alignBottom="@+id/textView8"
-            android:layout_alignStart="@+id/id"
+            android:layout_alignStart="@+id/pp"
+            android:layout_alignTop="@+id/textView8"
             android:background="@drawable/tvstyle"
-            android:ems="10"
             android:hint="輸入密碼"
-            android:inputType="textPersonName"
+            android:inputType="textPassword"
             android:textAllCaps="false"
             android:textColor="@color/colorPrimary"
-            android:textSize="18sp"
-            android:layout_alignTop="@+id/textView8" />
+            android:textSize="14sp" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="5dp"
+        android:layout_marginRight="35dp"
+        android:layout_marginLeft="90dp"
+        android:layout_weight="0"
+        android:orientation="horizontal">
+
+        <CheckBox
+            android:id="@+id/passcheck"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignStart="@+id/pass"
+            android:layout_below="@+id/pass"
+            android:layout_marginTop="10dp"
+            android:layout_weight="1"
+            android:checked="false"
+            android:text="顯示密碼"
+            android:textColor="@color/common_google_signin_btn_text_light_focused"
+            android:textSize="12sp" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_weight="0"
+        android:layout_marginTop="40dp"
+        android:layout_marginRight="60dp"
+        android:layout_marginLeft="60dp"
+        android:orientation="horizontal">
 
         <Button
             android:id="@+id/login"
             style="@android:style/Widget.Button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="12dp"
-            android:layout_marginStart="26dp"
-            android:text="確認"
-            android:textSize="24sp"
-            android:typeface="sans"
             android:layout_above="@+id/fb"
-            android:layout_alignStart="@+id/textView8" />
+            android:layout_alignStart="@+id/textView8"
+            android:layout_marginRight="20dp"
+            android:layout_weight="1"
+            android:onClick="loggin"
+            android:text="確認"
+            android:textSize="18sp"
+            android:typeface="sans" />
 
         <Button
             android:id="@+id/cancel"
             style="@android:style/Widget.Button.Small"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_alignTop="@+id/login"
+            android:layout_marginLeft="20dp"
+            android:layout_toEndOf="@+id/fb"
+            android:layout_weight="1"
+            android:onClick="exit_app"
             android:text="取消"
             android:textAlignment="center"
-            android:textSize="24sp"
-            android:layout_marginStart="15dp"
-            android:layout_alignTop="@+id/login"
-            android:layout_toEndOf="@+id/fb" />
+            android:textSize="18sp" />
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_weight="0"
+        android:layout_marginTop="15dp"
+        android:layout_marginRight="155dp"
+        android:layout_marginLeft="155dp"
+        android:orientation="horizontal">
 
         <Button
             android:id="@+id/fb"
@@ -105,37 +171,34 @@
             android:layout_width="50dp"
             android:layout_height="50dp"
             android:layout_above="@+id/register"
-            android:layout_marginBottom="28dp"
-            android:layout_marginStart="12dp"
             android:layout_toEndOf="@+id/login"
+            android:layout_weight="1"
             android:background="@drawable/fb"
             android:textSize="18sp" />
+    </LinearLayout>
 
-        <ImageView
-            android:id="@+id/imageView3"
-            android:layout_width="120dp"
-            android:layout_height="85dp"
-            android:layout_marginTop="34dp"
-            app:srcCompat="@drawable/logo"
-            android:layout_alignParentTop="true"
-            android:layout_centerHorizontal="true" />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_weight="0"
+        android:layout_marginTop="20dp"
+        android:layout_marginRight="10dp"
+        android:layout_marginLeft="10dp"
+        android:orientation="horizontal">
 
         <TextView
             android:id="@+id/register"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="36dp"
+            android:layout_alignParentBottom="true"
+            android:layout_centerHorizontal="true"
+            android:layout_weight="1"
             android:text="第一次註冊嗎？請按這裡"
+            android:textAlignment="center"
             android:textAllCaps="false"
             android:textColor="#0000FF"
-            android:textSize="14sp"
-            android:layout_alignParentBottom="true"
-            android:layout_centerHorizontal="true" />
-
-    </RelativeLayout>
+            android:textSize="14sp" />
+    </LinearLayout>
 
 
-
-
-
-</android.support.constraint.ConstraintLayout>
+</LinearLayout>
