--- a/app/src/main/res/layout/activity_student_personal.xml
+++ b/app/src/main/res/layout/activity_student_personal.xml
@@ -1,63 +1,56 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:gravity="center_horizontal"
+    android:orientation="vertical"
+    android:background="@drawable/stu_per_bg2"
     tools:context="com.example.user.coin.student_personal">
 
-    <RelativeLayout
-        android:layout_width="344dp"
-        android:layout_height="495dp"
-        tools:layout_editor_absoluteX="8dp"
-        tools:layout_editor_absoluteY="8dp">
+
+
+        <ImageView
+            android:id="@+id/imageView6"
+            android:layout_marginTop="50dp"
+            android:layout_width="150dp"
+            android:layout_height="120dp"
+            android:background="@drawable/tvstyle"
+            app:srcCompat="@drawable/stu_ic5" />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="70dp"
+        android:gravity="center_horizontal"
+        android:orientation="horizontal">
 
         <Button
-            android:id="@+id/button5"
-            android:layout_width="wrap_content"
-            android:layout_height="90dp"
-            android:background="@android:drawable/btn_star"
-            android:backgroundTint="#FFFFD563"
-            android:text="已應徵"
-            android:textSize="24sp"
-            android:layout_marginStart="44dp"
-            android:layout_alignParentTop="true"
-            android:layout_alignParentStart="true"
-            android:layout_marginTop="95dp" />
+            android:id="@+id/button14"
+            style="@android:style/Widget.Button"
+            android:layout_width="120dp"
+            android:layout_height="wrap_content"
+            android:onClick="job_mge"
+            android:text="工作管理"
+            android:textSize="18sp" />
+    </LinearLayout>
 
-        <Button
-            android:id="@+id/button6"
-            android:layout_width="wrap_content"
-            android:layout_height="100dp"
-            android:background="@android:drawable/radiobutton_off_background"
-            android:backgroundTint="@android:color/holo_green_light"
-            android:text="履歷管理"
-            android:textSize="24sp"
-            android:layout_alignTop="@+id/button5"
-            android:layout_alignParentEnd="true"
-            android:layout_marginEnd="35dp" />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="60dp"
+        android:gravity="center_horizontal"
+        android:orientation="horizontal">
 
         <Button
             android:id="@+id/button11"
-            android:layout_width="wrap_content"
-            android:layout_height="100dp"
-            android:background="@android:drawable/ic_menu_info_details"
-            android:backgroundTint="#FF0000"
-            android:text="已讀履歷"
-            android:textSize="24sp"
-            android:layout_alignParentBottom="true"
-            android:layout_alignStart="@+id/button5"
-            android:layout_marginBottom="111dp" />
+            style="@android:style/Widget.Button"
+            android:layout_width="120dp"
+            android:layout_height="wrap_content"
+            android:onClick="resume_mge"
+            android:text="履歷管理"
+            android:textSize="18sp" />
+    </LinearLayout>
 
-        <Button
-            android:id="@+id/button3"
-            android:layout_width="wrap_content"
-            android:layout_height="100dp"
-            android:layout_alignStart="@+id/button6"
-            android:layout_alignTop="@+id/button11"
-            android:background="@android:drawable/btn_radio"
-            android:backgroundTint="@android:color/holo_blue_dark"
-            android:text="未讀履歷"
-            android:textSize="24sp" />
-    </RelativeLayout>
-</android.support.constraint.ConstraintLayout>
+</LinearLayout>
