--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -6,9 +6,22 @@
     >
 
     <item
-        android:id="@+id/item1"
+        android:id="@+id/logout"
+        android:textAlignment="center"
+        android:title="登出"
+        app:showAsAction="always" />
+
+
+    <item
+        android:id="@+id/logo"
         android:icon="@drawable/logo"
+        android:textAlignment="center"
         android:title="One Stop"
         app:showAsAction="always" />
+
+
+
+
+
 
 </menu>
