--- a/app/src/main/res/layout/activity_student_menu.xml
+++ b/app/src/main/res/layout/activity_student_menu.xml
@@ -54,8 +54,10 @@
 
         <Button
             android:id="@+id/stu1"
-            android:layout_width="wrap_content"
+            android:layout_width="90dp"
             android:layout_height="90dp"
+            android:layout_marginLeft="7dp"
+            android:layout_marginRight="7dp"
             android:layout_toStartOf="@+id/stu2"
             android:layout_weight="1"
             android:background="@drawable/stu_icon1"
@@ -63,20 +65,24 @@
 
         <Button
             android:id="@+id/stu2"
-            android:layout_width="wrap_content"
+            android:layout_width="90dp"
             android:layout_height="90dp"
             android:layout_alignParentBottom="true"
             android:layout_centerHorizontal="true"
+            android:layout_marginLeft="7dp"
+            android:layout_marginRight="7dp"
             android:layout_weight="1"
             android:background="@drawable/stu_ic2"
             android:onClick="onClick" />
 
         <Button
             android:id="@+id/stu3"
-            android:layout_width="wrap_content"
+            android:layout_width="90dp"
             android:layout_height="90dp"
+            android:layout_marginLeft="7dp"
+            android:layout_marginRight="7dp"
             android:layout_weight="1"
-            android:background="@drawable/stu_ic3"
+            android:background="@drawable/stu_icon3"
             android:onClick="onClick" />
     </LinearLayout>
 
@@ -91,6 +97,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="0.63"
             android:text="職缺搜尋"
+
             android:textAlignment="center"
             android:textSize="18sp"
             android:textStyle="bold" />
@@ -111,8 +118,10 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="CASE"
+
             android:textAlignment="center"
-            android:textSize="18sp" />
+            android:textSize="18sp"
+            android:textStyle="bold" />
     </LinearLayout>
 
     <LinearLayout
@@ -123,24 +132,30 @@
 
         <Button
             android:id="@+id/stu4"
-            android:layout_width="122dp"
+            android:layout_width="114dp"
             android:layout_height="90dp"
-            android:background="@drawable/stu_ic5"
+            android:layout_marginLeft="5dp"
+            android:layout_marginRight="5dp"
+            android:background="@drawable/stu_icon4"
             android:onClick="onClick"
             android:textAlignment="viewStart" />
 
         <Button
             android:id="@+id/stu5"
-            android:layout_width="122dp"
+            android:layout_width="108dp"
             android:layout_height="90dp"
-            android:background="@drawable/stu_icon4"
+            android:layout_marginLeft="5dp"
+            android:layout_marginRight="5dp"
+            android:background="@drawable/stu_ic5"
             android:onClick="onClick" />
 
         <Button
             android:id="@+id/stu6"
             android:layout_width="match_parent"
             android:layout_height="90dp"
-            android:background="@android:drawable/btn_star_big_on"
+            android:layout_marginLeft="5dp"
+            android:layout_marginRight="5dp"
+            android:background="@drawable/stu_ic6"
             android:onClick="onClick" />
 
     </LinearLayout>
@@ -164,7 +179,7 @@
             android:id="@+id/textView29"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
+            android:layout_weight="1.30"
 
             android:text="群組"
             android:textAlignment="center"
