--- a/app/src/main/res/layout/activity_student_case_manage.xml
+++ b/app/src/main/res/layout/activity_student_case_manage.xml
@@ -28,11 +28,13 @@
             android:text="My CASE"
             android:textColor="#FFFFFF"
             android:textSize="18sp"
+            android:onClick="onClick"
             tools:layout_editor_absoluteX="8dp"
             tools:layout_editor_absoluteY="0dp" />
 
         <Button
             android:id="@+id/case_catch"
+            android:onClick="onClick"
             style="@android:style/Widget.Button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -44,5 +46,16 @@
             tools:layout_editor_absoluteX="8dp"
             tools:layout_editor_absoluteY="0dp" />
 
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="horizontal">
+
+        <ListView
+            android:id="@+id/listview"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
     </LinearLayout>
 </LinearLayout>
